[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Audio/BackgroundMusic/Why did you lie to me.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Levels/Inside Gas Station/GasStationInside.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Actor/Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Game Camera.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Object/Interactable_Object.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scripts/Levels/Basic_Level_Script.gd" type="Script" id=16]
[ext_resource path="res://Shaders/Fog/fog.shader" type="Shader" id=17]
[ext_resource path="res://Shaders/Fog/noise2.tres" type="Texture" id=18]
[ext_resource path="res://Scenes/Object/Interactable_Ladder.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/SpawnPoint1.tscn" type="PackedScene" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1182.5, 73.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 68.875, 293.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1094.25, 151.75 )

[sub_resource type="Gradient" id=10]

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 17 )
shader_param/tint = Color( 0.286275, 0.286275, 0.32549, 1 )
shader_param/scroll_direction_1 = Vector2( 0.2, -0.05 )
shader_param/time_scale_1 = 0.001
shader_param/tile_factor_1 = 0.1
shader_param/scroll_direction_2 = Vector2( 0.75, 0.25 )
shader_param/time_scale_2 = 0.005
shader_param/tile_factor_2 = 0.3
shader_param/noise_texture_2 = ExtResource( 18 )
shader_param/gradient_texture = SubResource( 11 )

[node name="Inside Gas Station" type="Node" groups=["Level"]]
pause_mode = 1
script = ExtResource( 16 )
level_width = 673
level_height = 216
level_name = "Inside Gas Station"
background_music = ExtResource( 1 )

[node name="FlatBackground" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Floor1" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="Floor1"]
visible = false
margin_right = 2022.0
margin_bottom = 360.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="OutOfBounds" type="StaticBody2D" parent="Floor1/Background"]
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="CollisionShape2D" parent="Floor1/Background/OutOfBounds"]
position = Vector2( 1060, 261 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="Floor1/Background/OutOfBounds"]
position = Vector2( -70.125, 212.75 )
shape = SubResource( 2 )

[node name="Top" type="CollisionShape2D" parent="Floor1/Background/OutOfBounds"]
position = Vector2( 1074, 20 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="Floor1/Background/OutOfBounds"]
position = Vector2( 741, 127 )
shape = SubResource( 2 )

[node name="GasStation" type="StaticBody2D" parent="Floor1/Background"]

[node name="Bullet Collisions" type="StaticBody2D" parent="Floor1/Background"]
visible = false
collision_layer = 32768
collision_mask = 32768
__meta__ = {
"_edit_lock_": true
}

[node name="Ladder" parent="Floor1/Background" instance=ExtResource( 19 )]
visible = false
position = Vector2( 1091, 259 )

[node name="ActorsAndObjects" type="YSort" parent="Floor1"]

[node name="Bloody Marks" parent="Floor1/ActorsAndObjects" instance=ExtResource( 15 )]
position = Vector2( 623, 172 )
object_name = "BloodyMarks"
dialog_trigger = "Bloody Marks"
overhead_text = "What happened here?"

[node name="Register" parent="Floor1/ActorsAndObjects" instance=ExtResource( 15 )]
position = Vector2( 523, 138 )
object_name = "Register"
dialog_trigger = "Register"
scale_of_interactable_box = Vector2( 1, 2 )

[node name="Player" parent="Floor1/ActorsAndObjects" instance=ExtResource( 13 )]
pause_mode = 1
position = Vector2( 41, 179 )

[node name="GameCamera" parent="Floor1/ActorsAndObjects/Player" instance=ExtResource( 14 )]
pause_mode = 2
offset = Vector2( 0, -50 )

[node name="SpawnPoint1" parent="Floor1/ActorsAndObjects" instance=ExtResource( 28 )]
position = Vector2( 44, 179 )

[node name="ExitDoor" parent="Floor1/ActorsAndObjects" instance=ExtResource( 15 )]
position = Vector2( 29, 161 )
scale = Vector2( 1, 1.2 )
scene_to_change_location = "res://Scenes/Levels/Gas Station/Outside Gas Station.tscn"
spawn_point = 3

[node name="FogShader" type="TextureRect" parent="."]
material = SubResource( 4 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 2

[connection signal="dialogWindow" from="Floor1/ActorsAndObjects/Bloody Marks" to="." method="_on_open_dialogWindow"]
[connection signal="dialogWindow" from="Floor1/ActorsAndObjects/Register" to="." method="_on_open_dialogWindow"]
